--- a/app/src/main/res/layout/cards_rv.xml
+++ b/app/src/main/res/layout/cards_rv.xml
@@ -35,16 +35,10 @@
                         android:layout_width="80dp"
                         android:layout_height="60dp"
                         android:layout_marginTop="16dp"
+                        android:id="@+id/card_icon"
                         android:src="@drawable/ic_nationalcard"
                         android:background="?attr/selectableItemBackground"
                         android:layout_marginStart="16dp"/>
-
-
-
-
-
-
-
 
                 </LinearLayout>
                 <LinearLayout
@@ -64,6 +58,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         tool:text="Halyk Bank - 4242"
+                        android:id="@+id/bank_and_last_digits"
                         android:layout_marginTop="16dp"
                         android:textSize="12dp"
                         />
@@ -73,11 +68,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="36dp"
                     android:layout_marginStart="8dp"
+                    android:id="@+id/card_amount"
                     tool:text="555 somoni"/>
-
-
-
-
 
             </LinearLayout>
             <LinearLayout
