--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -5,12 +5,22 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".FragmentLogin">
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/wave"
+        android:background="@drawable/wave"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/sign_in"
         android:textColor="@color/black"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textStyle="bold"
+        android:textSize="32sp"
+        app:layout_constraintTop_toBottomOf="@id/wave"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="16dp"/>
     <TextView
@@ -22,18 +32,20 @@
         app:layout_constraintBottom_toTopOf="@+id/login_editText"
         app:layout_constraintStart_toStartOf="parent"
         android:text="@string/login"/>
+
     <EditText
+        android:id="@+id/login_editText"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:drawableStart="@drawable/ic_person"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:background="@drawable/round_shape"
-        android:hint="@string/login"
         android:layout_marginHorizontal="8dp"
-        android:id="@+id/login_editText"/>
+        android:background="@drawable/round_shape"
+        android:drawableStart="@drawable/ic_person"
+        android:hint="@string/login"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.292" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -53,26 +65,28 @@
         android:hint="@string/password"
         android:background="@drawable/round_shape"
         android:drawableStart="@drawable/ic_lock"
+        android:layout_marginTop="40dp"
         app:layout_constraintTop_toBottomOf="@+id/login_editText"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/password"
-        app:layout_constraintStart_toStartOf="parent"
-        android:textColor="@color/black"
-        android:layout_marginStart="8dp"
-        android:text="@string/forgot_password"/>
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/login_button"
         app:layout_constraintTop_toBottomOf="@+id/password"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:text="@string/login"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/register"
+        app:layout_constraintTop_toBottomOf="@+id/login_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
+        android:text="@string/register"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
