--- a/app/src/main/res/drawable/ic_wallet.xml
+++ b/app/src/main/res/drawable/ic_wallet.xml
@@ -1,9 +1,5 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="48dp"
-    android:height="48dp"
-    android:viewportWidth="48"
-    android:viewportHeight="48">
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="M12,40q-3.3,0 -5.65,-2.35Q4,35.3 4,32L4,16q0,-3.3 2.35,-5.65Q8.7,8 12,8h24q3.3,0 5.65,2.35Q44,12.7 44,16v16q0,3.3 -2.35,5.65Q39.3,40 36,40ZM12,16.5h24q1.45,0 2.725,0.45Q40,17.4 41,18.25L41,16q0,-2.1 -1.45,-3.55Q38.1,11 36,11L12,11q-2.1,0 -3.55,1.45Q7,13.9 7,16v2.25q1,-0.85 2.275,-1.3Q10.55,16.5 12,16.5ZM7.15,23.3L31,29.05q0.35,0.1 0.725,0.025 0.375,-0.075 0.625,-0.325l8,-6.7q-0.65,-1.15 -1.8,-1.85 -1.15,-0.7 -2.55,-0.7L12,19.5q-1.75,0 -3.1,1.075T7.15,23.3Z"/>
+<vector android:height="50dp" android:tint="@color/orange"
+    android:viewportHeight="24" android:viewportWidth="24"
+    android:width="50dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="@android:color/white" android:pathData="M18,4H6C3.79,4 2,5.79 2,8v8c0,2.21 1.79,4 4,4h12c2.21,0 4,-1.79 4,-4V8C22,5.79 20.21,4 18,4zM16.14,13.77c-0.24,0.2 -0.57,0.28 -0.88,0.2L4.15,11.25C4.45,10.52 5.16,10 6,10h12c0.67,0 1.26,0.34 1.63,0.84L16.14,13.77zM6,6h12c1.1,0 2,0.9 2,2v0.55C19.41,8.21 18.73,8 18,8H6C5.27,8 4.59,8.21 4,8.55V8C4,6.9 4.9,6 6,6z"/>
 </vector>
