--- a/app/src/main/res/layout/main_menu_fragment.xml
+++ b/app/src/main/res/layout/main_menu_fragment.xml
@@ -18,8 +18,9 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:id="@+id/text_balance"
+            android:textColor="@color/black"
+            android:textSize="16sp"
             android:layout_marginTop="8dp"
-
             android:layout_marginStart="16dp"
             android:text="@string/balance"/>
         <TextView
@@ -69,6 +70,9 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:textSize="20sp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:id="@+id/text_cards"
@@ -83,10 +87,55 @@
                 android:orientation="horizontal"
                 tool:listitem="@layout/cards_rv"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginHorizontal="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/cards_rv"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:id="@+id/payment_layout">
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_wallet"
+                    android:id="@+id/transaction_button"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:background="?attr/selectableItemBackground"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/transaction_button"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:textColor="@color/black"
+                    android:id="@+id/transaction_text"
+                    android:text="@string/To_wallet"
+                    />
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/add_card"
+                    android:src="@drawable/ic_add_card"
+                    app:layout_constraintStart_toEndOf="@id/transaction_button"
+                    android:layout_marginStart="32dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:background="?attr/selectableItemBackground"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/add_card"
+                    android:text="@string/addcard"
+                    android:id="@+id/addcard_text"
+                    android:textColor="@color/black"
+                    android:layout_marginStart="28dp"
+                    app:layout_constraintStart_toEndOf="@id/transaction_text"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/cards_rv"
+                app:layout_constraintTop_toBottomOf="@+id/payment_layout"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
