--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -33,6 +33,12 @@
         <action
             android:id="@+id/action_fragmentMainPage_to_fragmentsHistory"
             app:destination="@id/fragmentsHistory" />
+        <action
+            android:id="@+id/action_fragmentMainPage_to_fragmentSettings"
+            app:destination="@id/fragmentSettings" />
+        <action
+            android:id="@+id/action_fragmentMainPage_to_fragmentTransaction"
+            app:destination="@id/fragmentTransaction" />
     </fragment>
     <fragment
         android:id="@+id/fragmentsHistory"
@@ -42,6 +48,9 @@
         <action
             android:id="@+id/action_fragmentsHistory_to_fragmentSettings"
             app:destination="@id/fragmentSettings" />
+        <action
+            android:id="@+id/action_fragmentsHistory_to_fragmentMainPage"
+            app:destination="@id/fragmentMainPage" />
     </fragment>
     <fragment
         android:id="@+id/fragmentSettings"
@@ -54,10 +63,25 @@
         <action
             android:id="@+id/action_fragmentSettings_to_changeProfileFragment"
             app:destination="@id/changeProfileFragment" />
+        <action
+            android:id="@+id/action_fragmentSettings_to_fragmentsHistory"
+            app:destination="@id/fragmentsHistory" />
+        <action
+            android:id="@+id/action_fragmentSettings_to_fragmentMainPage"
+            app:destination="@id/fragmentMainPage" />
     </fragment>
     <fragment
         android:id="@+id/changeProfileFragment"
         android:name="com.example.finalproskillsproject.ChangeProfileFragment"
         android:label="change_profile_info_fragment"
         tools:layout="@layout/change_profile_info_fragment" />
+    <fragment
+        android:id="@+id/fragmentTransaction"
+        android:name="com.example.finalproskillsproject.FragmentTransaction"
+        android:label="transaction_fragment"
+        tools:layout="@layout/transaction_fragment" >
+        <action
+            android:id="@+id/action_fragmentTransaction_to_fragmentMainPage"
+            app:destination="@id/fragmentMainPage" />
+    </fragment>
 </navigation>
