--- a/app/src/main/res/layout/registration_fragment.xml
+++ b/app/src/main/res/layout/registration_fragment.xml
@@ -38,8 +38,12 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/registration_name_entry"
                 android:hint="@string/name"
+                android:layout_marginHorizontal="16dp"
+                android:textSize="20sp"
+                android:paddingVertical="4dp"
+                android:paddingStart="4dp"
                 android:background="@drawable/round_shape"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
@@ -49,6 +53,10 @@
                 android:hint="@string/surname"
                 android:background="@drawable/round_shape"
                 android:id="@+id/registration_surname_entry"
+                android:layout_marginHorizontal="16dp"
+                android:textSize="20sp"
+                android:paddingVertical="4dp"
+                android:paddingStart="4dp"
                 app:layout_constraintTop_toBottomOf="@+id/registration_name_entry"
                 android:layout_marginTop="40dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -60,6 +68,10 @@
                 android:id="@+id/registration_password"
                 android:hint="@string/password"
                 android:inputType="textPassword"
+                android:layout_marginHorizontal="16dp"
+                android:textSize="20sp"
+                android:paddingVertical="4dp"
+                android:paddingStart="4dp"
                 android:background="@drawable/round_shape"
                 app:layout_constraintTop_toBottomOf="@+id/registration_surname_entry"
                 android:layout_marginTop="40dp"
@@ -71,6 +83,10 @@
                 android:id="@+id/registration_phone_entry"
                 android:hint="@string/phoneNumber"
                 android:background="@drawable/round_shape"
+                android:layout_marginHorizontal="16dp"
+                android:textSize="20sp"
+                android:paddingVertical="4dp"
+                android:paddingStart="4dp"
                 app:layout_constraintTop_toBottomOf="@+id/registration_password"
                 android:layout_marginTop="40dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -108,8 +124,8 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/date_picker"
                 app:layout_constraintStart_toEndOf="@id/registration_checkbox"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="50dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="45dp"
                 android:maxLines="3"
                 android:id="@+id/registration_terms"
                 android:text="@string/approval"/>
