--- a/app/src/main/res/layout/add_card_fragment.xml
+++ b/app/src/main/res/layout/add_card_fragment.xml
@@ -120,6 +120,15 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:text="Choose"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/valid_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Submit"
+        android:id="@+id/submit"
+        android:layout_marginTop="24dp"/>
 
 
 
