--- a/app/src/main/res/layout/change_profile_info_fragment.xml
+++ b/app/src/main/res/layout/change_profile_info_fragment.xml
@@ -13,6 +13,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:id="@+id/wave"
         android:background="@drawable/wave"/>
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/back"
+        android:background="?attr/selectableItemBackground"
+        android:src="@drawable/ic_back_white"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
