--- a/app/src/main/res/layout/balance_increase_fragment.xml
+++ b/app/src/main/res/layout/balance_increase_fragment.xml
@@ -74,6 +74,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="32dp"
+        android:id="@+id/submit"
         android:text="submit"/>
 
 
