--- a/app/src/main/res/layout/history_rv.xml
+++ b/app/src/main/res/layout/history_rv.xml
@@ -42,7 +42,8 @@
             android:textColor="@color/black"
             android:text="@string/date"
             android:paddingBottom="8dp"
-            android:layout_marginTop="16dp"/>
+            android:layout_marginTop="16dp"
+            android:id="@+id/transaction_date"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
