--- a/app/src/main/res/layout/add_card_fragment.xml
+++ b/app/src/main/res/layout/add_card_fragment.xml
@@ -119,7 +119,7 @@
         app:layout_constraintStart_toEndOf="@id/card_expire_entry"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
-        android:text="Choose"/>
+        android:text="Choose Date"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
