--- a/app/src/main/res/layout/change_language_bs.xml
+++ b/app/src/main/res/layout/change_language_bs.xml
@@ -59,17 +59,20 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
                 android:textSize="20sp"
+                android:id="@+id/russian"
                 android:text="@string/rus"/>
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
                 android:textSize="20sp"
+                android:id="@+id/english"
                 android:text="@string/eng"/>
         </RadioGroup>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/change_language"
             app:layout_constraintTop_toBottomOf="@id/language_radio_group"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
