--- a/app/src/main/res/layout/change_profile_info_fragment.xml
+++ b/app/src/main/res/layout/change_profile_info_fragment.xml
@@ -75,6 +75,8 @@
         android:id="@+id/birth_fixed"
         android:inputType="none"
         tools:text="28.09.1998"
+        android:visibility="gone"
+        tools:visibility="visible"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,7 +84,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/birth_fixed"
+        android:layout_marginEnd="50dp"
         app:layout_constraintTop_toBottomOf="@id/change_surname"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="32dp"
@@ -94,6 +96,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/apply_changes"
+        android:id="@+id/apply_changes"
         app:layout_constraintTop_toBottomOf="@id/change_birth"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
