--- a/app/src/main/res/layout/history_bs_layout.xml
+++ b/app/src/main/res/layout/history_bs_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/orange"
@@ -7,13 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:background="@color/light_orange"
-        android:paddingBottom="8dp"
-        android:id="@+id/upper_layout">
+        android:layout_height="match_parent">
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -24,127 +18,141 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"/>
-        <TextView
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/back"
-            android:text="@string/transaction"
-            android:textColor="@color/black"
-            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:textStyle="bold"
-            android:paddingEnd="70dp"
-            android:textSize="20sp"
-            android:id="@+id/transaction_person"
-            app:layout_constraintStart_toStartOf="parent"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/transaction_person"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="8dp"
-            android:layout_marginStart="24dp"
-            tools:text="20 TJS"
-            android:id="@+id/transaction_amount"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textStyle="bold"/>
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic__wallet_white"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="28dp"
-            app:layout_constraintStart_toEndOf="@id/transaction_person"
-            android:id="@+id/transaction_image"
-            android:background="?attr/itemBackground"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/transaction_status"
-            app:layout_constraintTop_toBottomOf="@+id/transaction_image"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            tools:text="Succesfull"
-            android:textSize="20sp"
-            android:drawableStart="@drawable/ic_check_box"
-            android:layout_marginEnd="32dp"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginHorizontal="16dp"
+            android:paddingBottom="16dp"
+
+            android:background="@drawable/round_white_design"
+            app:layout_constraintTop_toBottomOf="@id/back">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                android:text="@string/transaction"
+                android:textColor="@color/black"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:textStyle="bold"
+                android:paddingEnd="70dp"
+                android:textSize="20sp"
+                android:id="@+id/transaction_person_bs"
+                app:layout_constraintStart_toStartOf="parent"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/transaction_person_bs"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="24dp"
+                tools:text="20 TJS"
+                android:id="@+id/transaction_amount"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold"/>
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_wallet"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="28dp"
+                app:layout_constraintStart_toEndOf="@id/transaction_person_bs"
+                android:id="@+id/transaction_image_bs"
+                android:background="?attr/selectableItemBackground"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/transaction_status_bs"
+                app:layout_constraintTop_toBottomOf="@+id/transaction_image_bs"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                tools:text="Succesfull"
+                android:textSize="20sp"
+                android:drawableStart="@drawable/ic_check_box"
+                android:layout_marginEnd="32dp"
+                android:layout_marginTop="8dp"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1.2dp"
+                app:layout_constraintTop_toBottomOf="@id/transaction_status_bs"
+                android:layout_marginTop="4dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:background="@color/black"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/transaction_status_bs"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="16dp"
+                android:textSize="20sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                tools:text="Receiver: +992 935012824"
+                android:id="@+id/transaction_receiver_bs"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/transaction_commission_bs"
+                app:layout_constraintTop_toBottomOf="@id/transaction_receiver_bs"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="16dp"
+                android:textStyle="bold"
+                android:layout_marginTop="24dp"
+                android:textSize="20sp"
+                tools:text="Commission: 0% "
+                android:textColor="@color/black"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/transaction_method_bs"
+                app:layout_constraintTop_toBottomOf="@id/transaction_commission_bs"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="16dp"
+                android:textStyle="bold"
+                android:layout_marginTop="24dp"
+                android:textSize="20sp"
+                tools:text="Payment method: E-wallet"
+                android:textColor="@color/black"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/transaction_date_bs"
+                app:layout_constraintTop_toBottomOf="@id/transaction_method_bs"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="16dp"
+                android:textStyle="bold"
+                android:layout_marginTop="24dp"
+                android:textSize="20sp"
+                tools:text="Date: 21.08.2022 16:22"
+                android:textColor="@color/black"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/transaction_id"
+                app:layout_constraintTop_toBottomOf="@id/transaction_date_bs"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="16dp"
+                android:textStyle="bold"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="16dp"
+                android:textSize="20sp"
+                tools:text="ID: 2314123213"
+                android:textColor="@color/black"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginHorizontal="16dp"
-        android:paddingBottom="16dp"
 
-        android:background="@drawable/round_white_design"
-        app:layout_constraintTop_toBottomOf="@id/upper_layout">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="16dp"
-            android:layout_marginStart="16dp"
-            android:textSize="20sp"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            tools:text="Receiver: +992 935012824"
-            android:id="@+id/transaction_receiver"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/transaction_commission"
-            app:layout_constraintTop_toBottomOf="@id/transaction_receiver"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp"
-            android:textStyle="bold"
-            android:layout_marginTop="24dp"
-            android:textSize="20sp"
-            tools:text="Commission: 0% "
-            android:textColor="@color/black"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/transaction_method"
-            app:layout_constraintTop_toBottomOf="@id/transaction_commission"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp"
-            android:textStyle="bold"
-            android:layout_marginTop="24dp"
-            android:textSize="20sp"
-            tools:text="Payment method: E-wallet"
-            android:textColor="@color/black"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/transaction_date"
-            app:layout_constraintTop_toBottomOf="@id/transaction_method"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp"
-            android:textStyle="bold"
-            android:layout_marginTop="24dp"
-            android:textSize="20sp"
-            tools:text="Date: 21.08.2022 16:22"
-            android:textColor="@color/black"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/transaction_id"
-            app:layout_constraintTop_toBottomOf="@id/transaction_date"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp"
-            android:textStyle="bold"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="16dp"
-            android:textSize="20sp"
-            tools:text="ID: 2314123213"
-            android:textColor="@color/black"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
