--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -15,15 +15,6 @@
         app:layout_constraintStart_toStartOf="parent"
         android:id="@+id/layout"
         app:layout_constraintEnd_toEndOf="parent">
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:src="@drawable/ic_back"
-            android:id="@+id/back"
-            android:layout_marginStart="12dp"
-            android:background="?attr/selectableItemBackground"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -34,14 +25,14 @@
             android:layout_marginTop="16dp"
             android:layout_marginStart="32dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/back"
+            app:layout_constraintStart_toStartOf="parent"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/phone"
             tool:text="+992"
-            app:layout_constraintStart_toEndOf="@+id/back"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="32dp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/fullName"/>
@@ -109,7 +100,7 @@
                     android:id="@+id/qr_text"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:drawableStart="@drawable/ic_qr"
+                    android:drawableStart="@drawable/ic_qr24"
                     android:textColor="@color/black"
                     />
                 <TextView
@@ -151,7 +142,7 @@
                     />
                 <TextView
                     android:layout_width="wrap_content"
-                    tool:text="English"
+                    android:text="English"
                     android:id="@+id/settings_language"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -247,18 +238,14 @@
 
                 android:background="?attr/selectableItemBackground"
                 android:layout_height="wrap_content">
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:src="@drawable/ic_log_out"
-                    android:background="?attr/selectableItemBackground"/>
+
 
                 <TextView
                     android:layout_width="wrap_content"
-                    tool:text="Log out"
+                    tool:text="Log out  "
                     android:id="@+id/log_out_icon"
+                    android:drawableEnd="@drawable/ic_log_out"
+                    android:paddingEnd="8dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_height="wrap_content"/>
